--- a/hacknew/index.html
+++ b/hacknew/index.html
@@ -51,6 +51,7 @@
           <li><a href="#sponsorship12">SPONSORS</a></li>
           <li><a href="#">PRIZES</a></li>
           <li><a href="#contact">CONTACT</a></li>
+          <li><a href="#timeline">TIMELINE</a></li>
         </ul>
       </div>
       <div class="social_media" style="display:flex;justify-content:right; margin-top: -35px;">
@@ -148,15 +149,12 @@
 
     </div>
   </div>
-  <!--about hackoverflow ends-->
-  <!-- images
-  <div class="VECTORS">
-  <img src="images/tank_2-removebg-preview.png" width="20%" height="30%" style="transform: scaleX(-1);float: right;">
-  </div> -->
   <!--TIMELINE-->
+  <div id="timeline">
   <center><h1>TIMELINE</h1></center>
   <br>
   <br>
+  
   <div class="TL">
   <div class="flip-box">
     <div class="flip-box-inner">
@@ -242,6 +240,7 @@
   </div>
   <br>
   <br>
+  </div>
   </div>
   <!--TIMELINE ENDS HERE-->
   <!-- Sponsorship section Begins -->
@@ -470,6 +469,12 @@
             <a href="https://twitter.com/ieeeiasvit" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
+            <a href="https://discord.gg/e6PTyNz335" target="_blank">
+              <i class="fab fa-discord"></i>
+            </a>
+            <a href="https://www.linkedin.com/company/ieeeiasvit/" target="_blank">
+              <i class="fab fa-linkedin"></i>
+            </a>
           </div>
         </div>
       </div>
@@ -514,7 +519,7 @@
       <div class="container">
         <div style="width: 100%; text-align: center;">
           <div class="copy-text">
-            <p style="color: white">&copy; <a href="#">IEEE-IAS </a>. All Rights Reserved</p>
+            <p style="color: white">&copy; <a href="#">IEEE-IAS VIT </a>. All Rights Reserved</p>
           </div>
         </div>
       </div>
